@@ -6,12 +6,25 @@ endif()
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(PreventInSourceBuilds)
 
-option(LIB_MAN "Build libcerf man pages" ON)
-option(LIB_INSTALL "Install libcerf" ON)
+if(NOT DEFINED BUILD_SHARED_LIBS)
+    option(BUILD_SHARED_LIBS "Build as shared library" ON)
+endif()
+if(NOT DEFINED LIB_MAN)
+    option(LIB_MAN "Build libcerf man pages" ON)
+endif()
+if(NOT DEFINED LIB_RUN)
+    option(LIB_RUN "Build executables for command-line computation" ON)
+endif()
+if(NOT DEFINED LIB_INSTALL)
+    option(LIB_INSTALL "Install libcerf" ON)
+endif()
 option(PEDANTIC "Compile with pedantic warnings" ON)
 
 if(MSVC)
     set(CERF_CPP ON)
+    if(BUILD_SHARED_LIBS)
+        set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    endif()
 else()
     option(CERF_CPP "Build libcerf as native C++" OFF)
     add_compile_options(-O2)
@@ -21,7 +34,6 @@ else()
 endif()
 
 if(CERF_CPP)
-    message(STATUS "will compile project libcerf as C++ code")
     project(cerfcpp CXX)
     # add_compile_definitions(CERF_AS_CPP) # requires CMake 3.13, therefore more explicitly:
     if(MSVC)
@@ -31,7 +43,6 @@ if(CERF_CPP)
     endif()
     set(CMAKE_CXX_STANDARD 14)
 else()
-    message(STATUS "will compile project libcerf as C code")
     project(cerf C)
     set(CMAKE_C_STANDARD 99)
 endif()
@@ -50,8 +61,10 @@ if(LIB_INSTALL)
 endif()
 
 add_subdirectory(lib)
-add_subdirectory(run)
 add_subdirectory(test)
-if (${LIB_MAN})
+if (LIB_RUN)
+    add_subdirectory(run)
+endif()
+if (LIB_MAN)
     add_subdirectory(man)
 endif()
