@@ -2,7 +2,8 @@ set(lib cerf)
 if (${CERF_CPP})
     set(lib cerfcpp)
 endif()
-message(STATUS "libcerf/lib: build library ${lib}, CERF_CPP=${CERF_CPP}")
+message(STATUS
+    "libcerf/lib: build library ${lib}, CERF_CPP=${CERF_CPP}, shared=${BUILD_SHARED_LIBS}")
 
 set(cerf_LIBRARY ${lib} PARENT_SCOPE)
 
@@ -13,11 +14,7 @@ if (${CERF_CPP})
     set_property(SOURCE ${src_files} PROPERTY LANGUAGE CXX)
 endif()
 
-if(MSVC)
-    add_library(${lib} ${src_files})
-else()
-    add_library(${lib} SHARED ${src_files})
-endif()
+add_library(${lib} ${src_files})
 
 set_target_properties(
     ${lib} PROPERTIES
