@@ -12,5 +12,5 @@ foreach(test ${tests})
         set_property(TARGET ${test} PROPERTY LINKER_LANGUAGE CXX)
     endif()
     target_link_libraries(${test} ${cerf_LIBRARY})
-    add_test(${test} ${CMAKE_CURRENT_BINARY_DIR}/${test})
+    add_test(${test} ${test})
 endforeach()
